mule-user-guide/v/3.2/configuring-an-endpoint.adoc
= 配置端点

这个"core concepts"示例引入了流和端点，并演示了如何使用HTTP调用Mule应用程序。这个例子介绍了Mule中的两个关键概念：

*  link:/mule-user-guide/v/3.2/using-flows-for-service-orchestration[流]  -  Mule流程是构建集成应用程序的灵活方式。您只需从Mule的各种功能中选择任意数量的构件，并将它们组合或粘合到一个单一的可重复过程中。

*  link:/mule-user-guide/v/3.2/configuring-endpoints[端点]  -  Mule中的端点是用于接收或发送数据的通道。端点具有特定的协议，例如HTTP或JMS，以及一组用于配置过滤器，事务，转换等的元素。有两种类型的端点：入站或出站。入站端点接收数据并允许外部客户端调用流程。在这个特定的例子中，我们使用一个HTTP入站端点，但Mule中的大多数端点可以用于入站和出站通信。相反，出站端点用于将数据发布或发送到流，应用程序或资源。

== 您将学习什么

* 如何在Mule Studio中创建一个Mule流
* 如何发布Mule应用程序并通过HTTP访问它
* 如何为您的应用程序配置HTTP
* 如何在Mule Studio中运行流程

观看视频
视频:: n8XM5Aa9mBQ [YouTube的]

看到这个例子在Mule Studio中构建和运行

1.运行Mule Studio并创建一个新项目。

2.这将打开_New Project_对话框，在那里给项目一个名称。我们称之为'核心概念'。

3.在向导对话框中单击下一步。向导中的下一页会要求您创建一个名为“echo”的流程。


4.在向导对话框中单击完成。该向导创建一个新项目，Mule Studio显示一个调色板和空画布。从调色板中的端点部分，将HTTP端点拖放到画布上。


5.双击画布上的HTTP端点以编辑其属性。将主机设置为`localhost`，并将端口设置为8081：


6.关闭HTTP属性对话框。在调色板中，单击“组件”部分并将Echo Component拖动到画布上，将其放置在HTTP端点旁边。


您已经创建了一个简单的HTTP回显流程，现在可以运行它了。

== 运行示例

7.右键单击项目树中的流程，然后选择运行方式...→Mule应用程序


8.您将在控制台窗口中看到日志信息。当Mule开始在控制台显示启动画面时，您的应用程序已启动。


9.接下来，打开浏览器并转至http：// localhost：8081 / echo。您应该在浏览器中看到以下内容：


== 摘要

* 您在Mule中创建了您的第一个流程。该流程创建了用于接受传入请求的HTTP服务器。通过转到浏览器中的网址`http://localhost:8081/echo`来调用该流程。
* 收到请求时，回显组件只是返回作为请求一部分发送的内容。
* 在浏览器中，您执行了HTTP GET请求。由于我们在URL上发送的唯一信息是路径“/ echo”，它被回显。

==  XML配置

每个流具有您在上面看到的图形表示和示出的流程的底层配置的XML配置图。我们不打算做与XML配置何事，但现在它的好，知道它的存在。关于骡子Studio中的真正好处是，它完全支持双路编辑无论是在图形或XML配置视图。

这个例子的XML配置非常简单：

[source,xml,linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:core="http://www.mulesoft.org/schema/mule/core"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="EE-3.3.0" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd ">    <flow name="echo-flow" doc:name="echo-flow">        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>        <echo-component doc:name="Echo"/>    </flow></mule>
----

== 参考

*  link:/mule-user-guide/v/3.2/mule-studio[Mule Studio入门]
*  link:/mule-user-guide/v/3.2/using-flows-for-service-orchestration[使用流进行服务编排]
*  link:/mule-user-guide/v/3.2/configuring-endpoints[端点]
*  link:/mule-user-guide/v/3.2/http-transport-reference[HTTP连接器]

'''''
